--- a/website/source/com/janilla/templates/website/configuration.properties
+++ b/website/source/com/janilla/templates/website/configuration.properties
@@ -1,5 +1,9 @@
 website-template.database.file=~/janilla/sample-data/website-template.database
 website-template.jwt.key=secretkey
 website-template.live-demo=false
+website-template.mail.host=smtp.example.com
+website-template.mail.port=465
+website-template.mail.username=foo.bar@example.com
+website-template.mail.password=password
 website-template.server.port=8443
 website-template.upload.directory=~/janilla/sample-data/website-template-upload
