--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.janilla</groupId>
 	<artifactId>janilla-templates</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>com.janilla</groupId>
 			<artifactId>janilla</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -18,7 +18,7 @@
 			<dependency>
 				<groupId>com.janilla</groupId>
 				<artifactId>janilla-templates-blank</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<version>1.0.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
