--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>com.janilla</groupId>
 			<artifactId>janilla</artifactId>
-			<version>5.0.1</version>
+			<version>5.0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
