--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 	</dependencyManagement>
 	<modules>
 		<module>blank</module>
+		<module>ecommerce</module>
 		<module>website</module>
 	</modules>
 	<properties>
