--- a/ecommerce/source/com/janilla/templates/ecommerce/configuration.properties
+++ b/ecommerce/source/com/janilla/templates/ecommerce/configuration.properties
@@ -1,6 +1,6 @@
 ecommerce-template.database.file=~/janilla/sample-data/ecommerce-template.database
 ecommerce-template.jwt.key=secretkey
-ecommerce-template.live-demo=true
+ecommerce-template.live-demo=false
 ecommerce-template.mail.host=smtp.example.com
 ecommerce-template.mail.port=465
 ecommerce-template.mail.username=foo.bar@example.com
