--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
 		<dependency>
 			<groupId>com.janilla</groupId>
 			<artifactId>janilla</artifactId>
-			<version>7.0.0</version>
+			<version>8.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<!--
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -22,6 +23,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	-->
 	<modules>
 		<module>blank</module>
 		<module>ecommerce</module>
